--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,54 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400);
 
 body {
-    background-color: #193441;
-    color: #E6E2AF;
+    background-color: #79ac55;
     margin: 0;
     padding: 0;
-    text-shadow: 1.2px 1.2px 0 rgba(0, 0, 0, 0.5);
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
     font-family: 'Lato', sans-serif;
+}
+
+#calculator {
+    background-color: #cccccc;
+    margin: 40px auto 25px auto;
+    padding: 0px 15px 0px 15px;
+    width: 400px;
+    text-align: center;
+
+}
+
+#input {
+    background-color: #f1f1f1;
+    border: 1px solid #dddddd;
+    border-radius: 1px;
+    height: 60px;
+    /*width: 400px;*/
+    margin: 10px;
+    padding: 10px;
+    text-align: right;
+    vertical-align: middle;
+    font-size: 2em;
+    /*overflow-x: visible;*/
+    /*transition: all 2s ease-in-out;*/
+}
+
+.row div {
+    padding: 30px;
+    font-size: 1.5em;
+    transition: all .15s ease-in-out;
+
+
+}
+
+.row div:hover {
+    background-color: #f1f1f1;
+    -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+    border-color: #eeeeee;
+}
+
+.row div:active {
+    font-weight: bold;
 }
 
 a {
@@ -17,5 +59,3 @@ a:hover, a:visited {
     color: #A7A37E;
     text-decoration: none;
 }
-
-
