--- a/css/main.css
+++ b/css/main.css
@@ -7,44 +7,32 @@ body {
     color: #6e1039;
 }
 .baza {
-    width: 400px;
+    width: 300px;
 }
 .calculator {
     background-color: #C7B07B;
-    margin: 40px auto 25px auto;
+    margin: 10px auto 10px auto;
     padding: 0 15px 0 15px;
     text-align: center;
 }
-.display {
-    background-color: #FFF6D9;
-    /*border: 1px solid #dddddd;*/
-    /*border-radius: 1px;*/
-    height: 1.5em;
-    /*width: 400px;*/
-    margin: 0 10px 10px 10px;
-    /*padding: 10px;*/
-    text-align: right;
-    vertical-align: middle;
-    font-size: 2em;
-    /*overflow-x: hidden;*/
-    /*transition: all 2s ease-in-out;*/
-}
 .log {
     background-color: #FFF6D9;
-    /*border: 1px solid #dddddd;*/
-    /*border-radius: 1px;*/
     height: 1.5em;
-    /*width: 400px;*/
-    margin: 10px 10px 0 10px;
-    /*padding: 10px;*/
+    margin-top: 5px;
     text-align: right;
     vertical-align: middle;
     font-size: 1em;
-    /*overflow-x: hidden;*/
-    /*transition: all 2s ease-in-out;*/
+}
+.display {
+    background-color: #FFF6D9;
+    height: 1.5em;
+    margin-bottom: 5px;
+    text-align: right;
+    vertical-align: middle;
+    font-size: 2em;
 }
 .row div {
-    padding: 30px;
+    padding: 17px;
     font-size: 1.5em;
     transition: all .15s ease-in-out;
 }
@@ -57,7 +45,6 @@ body {
 }
 .row div:active {
     color: #000000;
-    font-weight: bold;
     font-weight: bold;
 }
 a {
