--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,22 @@
 body {
-    background-color: #85714d;
+    background-color: #7ECEFD;
     margin: 0;
     padding: 0;
     text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
     font-family: 'Lato', sans-serif;
-    color: #6e1039;
+    color: #3E454C;
 }
 .baza {
     width: 300px;
 }
 .calculator {
-    background-color: #C7B07B;
+    background-color: #CDE855;
     margin: 10px auto 10px auto;
     padding: 0 15px 0 15px;
     text-align: center;
 }
 .log {
-    background-color: #FFF6D9;
+    background-color: #FFF6E5;
     height: 1.5em;
     margin-top: 5px;
     text-align: right;
@@ -24,7 +24,7 @@ body {
     font-size: 1em;
 }
 .display {
-    background-color: #FFF6D9;
+    background-color: #FFF6E5;
     height: 1.5em;
     margin-bottom: 5px;
     text-align: right;
@@ -37,14 +37,14 @@ body {
     transition: all .15s ease-in-out;
 }
 .row div:hover {
-    background-color: #E8D9AC;
+    background-color: #FFF6E5;
     -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
     /*border-color: #eeeeee;*/
 }
 .row div:active {
-    color: #000000;
+    color: #F5F6D4;
     font-weight: bold;
 }
 a {
@@ -53,4 +53,9 @@ a {
 a:hover, a:visited {
     color: #A7A37E;
     text-decoration: none;
+}
+hr {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
