--- a/css/main.css
+++ b/css/main.css
@@ -2,22 +2,28 @@ body {
     background-color: #7ECEFD;
     margin: 0;
     padding: 0;
-    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
+    /*text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);*/
     font-family: 'Lato', sans-serif;
     color: #3E454C;
+    /*the cursor doesn't change and the numbers on buttons won't get highlighted*/
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: default;
 }
 .baza {
     width: 300px;
 }
 .calculator {
     background-color: #CDE855;
-    margin: 10px auto 10px auto;
+    /*margin: 10px auto 10px auto;*/
     padding: 0 15px 0 15px;
     text-align: center;
 }
 .log {
     background-color: #FFF6E5;
-    height: 1.5em;
+    /*height: 1.5em;*/
     margin-top: 5px;
     text-align: right;
     vertical-align: middle;
@@ -25,8 +31,8 @@ body {
 }
 .display {
     background-color: #FFF6E5;
-    height: 1.5em;
-    margin-bottom: 5px;
+    /*height: 1.5em;*/
+    margin: 0 0 5px 0;
     text-align: right;
     vertical-align: middle;
     font-size: 2em;
@@ -41,7 +47,6 @@ body {
     -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
-    /*border-color: #eeeeee;*/
 }
 .row div:active {
     color: #F5F6D4;
@@ -58,4 +63,9 @@ hr {
     border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+textarea {
+  resize: none;
+  border: none;
+  overflow: hidden;
 }
