--- a/css/main.css
+++ b/css/main.css
@@ -1,69 +1,126 @@
 body {
-    background-color: #7ECEFD;
     margin: 0;
     padding: 0;
     /*text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);*/
     font-family: 'Lato', sans-serif;
-    color: #3E454C;
+    color: #292929;
     /*the cursor doesn't change and the numbers on buttons won't get highlighted*/
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
     cursor: default;
+    background: linear-gradient(270deg, #9850cf, #4b9fcf);
+    background-size: 400% 400%;
+    -webkit-animation: AnimationName 30s ease infinite;
+    -moz-animation: AnimationName 30s ease infinite;
+    animation: AnimationName 30s ease infinite;
 }
+
+@-webkit-keyframes AnimationName {
+    0% {
+        background-position: 0% 50%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0% 50%
+    }
+}
+
+@-moz-keyframes AnimationName {
+    0% {
+        background-position: 0% 50%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0% 50%
+    }
+}
+
+@keyframes AnimationName {
+    0% {
+        background-position: 0% 50%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0% 50%
+    }
+}
+
 .baza {
     width: 300px;
 }
+
 .calculator {
+    margin-top: 5em;
     background-color: #CDE855;
-    /*margin: 10px auto 10px auto;*/
     padding: 0 15px 0 15px;
     text-align: center;
+    box-shadow: 0 0 15px rgba(0, 0, 0, .5);
+    border: 5px outset #bedb41;
 }
+
+#ekran {
+    margin: 0.5em 0;
+    border: 5px inset #e6ddcd;
+}
+
 .log {
     background-color: #FFF6E5;
-    /*height: 1.5em;*/
-    margin-top: 5px;
     text-align: right;
     vertical-align: middle;
     font-size: 1em;
 }
+
 .display {
     background-color: #FFF6E5;
-    /*height: 1.5em;*/
-    margin: 0 0 5px 0;
     text-align: right;
     vertical-align: middle;
     font-size: 2em;
+    overflow: hidden;
 }
+
 .row div {
     padding: 17px;
     font-size: 1.5em;
-    transition: all .15s ease-in-out;
+    transition: all .1s ease-in-out;
 }
+
 .row div:hover {
     background-color: #FFF6E5;
     -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
-    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.3);
 }
+
 .row div:active {
     color: #F5F6D4;
     font-weight: bold;
 }
+
 a {
     color: #6e1039;
-}
-a:hover, a:visited {
-    color: #A7A37E;
     text-decoration: none;
 }
+
+a:hover, a:visited {
+    /*color: #A7A37E;*/
+    color: inherit;
+    text-decoration: none;
+}
+
 hr {
     border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
+
 textarea {
     resize: none;
     border: none;
